# ContractGuard

./: .gitignore  README.md  README_CN.md  pyproject.toml
.github/workflows/: ci.yml
contractguard/: analyzer.py  cli.py  models.py  report.py  web.py
examples/: sample_lease.txt  sample_nda.txt
fineprint/: __init__.py  __main__.py  analyzer.py  cli.py  parser.py  report.py
tests/: test_models.py  test_parser.py
